--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
       Your browser does not support canvas
     </canvas>
 
-    <script src="./scripts/main.js"></script>
+    <script type="module" src="./scripts/main.js"></script>
   </body>
 </html>
