--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       Your browser does not support canvas
     </canvas>
 
-    <script type="module" src="./scripts/main.js"></script>
+    <script src="./scripts/canvas.js"></script>
+    <script src="./scripts/food.js"></script>
+    <script src="./scripts/snake.js"></script>
+    <script src="./scripts/main.js"></script>
   </body>
 </html>
