snake death on boundary intersection

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <title>Snake Game</title>
   </head>
   <body>
-    <canvas id="game-board" width="400" height="400">
-      Your browser does not support canvas
-    </canvas>
+    <canvas id="game-board"> Your browser does not support canvas </canvas>
 
     <script src="./scripts/canvas.js"></script>
     <script src="./scripts/food.js"></script>
